--- a/FAQPlugin.csproj
+++ b/FAQPlugin.csproj
@@ -121,7 +121,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\FAQPAdminController.cs" />
-    <Compile Include="Controllers\RQPRetailController.cs" />
+    <Compile Include="Controllers\FAQRetailController.cs" />
     <Compile Include="Models\FAQModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FAQPlugin.cs" />
@@ -159,6 +159,7 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Views\_FAQWidget.cshtml" />
     <None Include="Views\Index.cshtml" />
     <Content Include="Resource\create_faq_table.sql" />
     <Content Include="Resource\drop_faq_table.sql" />
@@ -166,7 +167,12 @@
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\AbleCommerce\Website\AbleCommerce.csproj">
+      <Project>{482b9a46-206d-4a84-aae4-ca54efe63ef2}</Project>
+      <Name>AbleCommerce</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>RD /S /Q "$(ProjectDir)\Build"
