--- a/FAQPlugin.csproj
+++ b/FAQPlugin.csproj
@@ -131,7 +131,10 @@
   <ItemGroup>
     <Compile Include="Controllers\FAQPAdminController.cs" />
     <Compile Include="Controllers\FAQRetailController.cs" />
-    <Compile Include="Models\FAQModel.cs" />
+    <Compile Include="FAQRepository.cs" />
+    <Compile Include="IFAQRepository.cs" />
+    <Compile Include="FAQ.cs" />
+    <Compile Include="Models\FAQModelParams.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FAQPlugin.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -159,6 +162,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="FAQ.hbm.xml" />
     <Content Include="PluginManifest.xml">
       <SubType>Designer</SubType>
     </Content>
@@ -168,6 +172,7 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Views\_FAQWidget.cshtml" />
     <None Include="Views\Index.cshtml" />
     <Content Include="Resource\create_faq_table.sql" />
@@ -175,6 +180,7 @@
     <Content Include="Views\web.config">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Views\_ViewStart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\AbleCommerce\Website\AbleCommerce.csproj">
