--- a/FAQPlugin.csproj
+++ b/FAQPlugin.csproj
@@ -131,10 +131,12 @@
   <ItemGroup>
     <Compile Include="Controllers\FAQPAdminController.cs" />
     <Compile Include="Controllers\FAQRetailController.cs" />
+    <Compile Include="FAQMapping.cs" />
     <Compile Include="FAQRepository.cs" />
     <Compile Include="IFAQRepository.cs" />
     <Compile Include="FAQ.cs" />
     <Compile Include="Models\FAQModelParams.cs" />
+    <Compile Include="MyNHibernateHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FAQPlugin.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
