--- a/FAQPlugin.csproj
+++ b/FAQPlugin.csproj
@@ -136,6 +136,7 @@
     <Compile Include="IFAQRepository.cs" />
     <Compile Include="FAQ.cs" />
     <Compile Include="Models\FAQModelParams.cs" />
+    <Compile Include="Models\QuestionsViewModel.cs" />
     <Compile Include="MyNHibernateHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FAQPlugin.cs" />
@@ -183,6 +184,9 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\_ViewStart.cshtml" />
+    <None Include="Views\_AnsweredFAQs.cshtml" />
+    <None Include="Views\_AllFAQs.cshtml" />
+    <None Include="Views\_UnAnsweredFAQs.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\AbleCommerce\Website\AbleCommerce.csproj">
