--- a/FAQPlugin.csproj
+++ b/FAQPlugin.csproj
@@ -84,6 +84,10 @@
       <HintPath>..\packages\NHibernate.5.0.3\lib\net461\NHibernate.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Bin\PagedList.dll</HintPath>
+    </Reference>
     <Reference Include="Remotion.Linq, Version=2.1.0.0, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
       <HintPath>..\packages\Remotion.Linq.2.1.2\lib\net45\Remotion.Linq.dll</HintPath>
       <Private>True</Private>
@@ -180,6 +184,7 @@
     <None Include="Views\Index.cshtml" />
     <Content Include="Resource\create_faq_table.sql" />
     <Content Include="Resource\drop_faq_table.sql" />
+    <Content Include="Resource\notification.js" />
     <Content Include="Views\web.config">
       <SubType>Designer</SubType>
     </Content>
