--- a/FAQPlugin.csproj
+++ b/FAQPlugin.csproj
@@ -139,8 +139,11 @@
     <Compile Include="FAQRepository.cs" />
     <Compile Include="IFAQRepository.cs" />
     <Compile Include="FAQ.cs" />
-    <Compile Include="Models\FAQModelParams.cs" />
+    <Compile Include="Models\FAQParams.cs" />
     <Compile Include="Models\QuestionsViewModel.cs" />
+    <Compile Include="Models\QuestionType.cs" />
+    <Compile Include="Models\SortExpression.cs" />
+    <Compile Include="Models\ViewName.cs" />
     <Compile Include="MyNHibernateHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FAQPlugin.cs" />
@@ -180,7 +183,6 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="app.config" />
-    <None Include="Views\_EditModal.cshtml" />
     <None Include="Views\_FAQWidget.cshtml" />
     <None Include="Views\Index.cshtml" />
     <Content Include="Resource\create_faq_table.sql" />
