--- a/FAQPlugin.csproj
+++ b/FAQPlugin.csproj
@@ -139,12 +139,11 @@
     <Compile Include="FAQRepository.cs" />
     <Compile Include="IFAQRepository.cs" />
     <Compile Include="FAQ.cs" />
+    <Compile Include="Models\AskQuestionModel.cs" />
     <Compile Include="Models\FAQParams.cs" />
     <Compile Include="Models\QuestionsViewModel.cs" />
     <Compile Include="Models\QuestionType.cs" />
     <Compile Include="Models\SortExpression.cs" />
-    <Compile Include="Models\ViewName.cs" />
-    <Compile Include="MyNHibernateHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FAQPlugin.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -153,6 +152,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="RouteProvider.cs" />
+    <Compile Include="Models\RetailViewModel.cs" />
+    <None Include="Views\_AskQuestion.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
